services/linus-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: seino
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: seino
