services/seino-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seino
spec:
  tls:
  - hosts: 
    - seino.example.com
    secretName: tls-secret
  rules:
  - host: seino.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: seino-nodeport
            port:
              number: 80
