services/seino-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seino
spec:
  rules:
  - host: seino.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: seino-nodeport
            port:
              number: 80
